issues with clear location on smaller screens

--- a/resources/scss/_mixins.scss
+++ b/resources/scss/_mixins.scss
@@ -44,6 +44,9 @@
   @media screen and (max-width: 1240px) { @content; }
 }
 
+@mixin largeish {
+  @media screen and (max-width: 1100px) { @content; }
+}
 
 @mixin tall {
   @media screen and (min-height: 1000px) { @content; }
